# CV_Basic

./: CMakeLists.txt  TodoList.md
CamParam/: CameraParameter.yaml
Capture/: CMakeLists.txt  main.cpp
CharucoCalibration/: .gitignore  CMakeLists.txt
CvLib/: cameraParam.cpp  cameraParam.h  util.cpp  util.h
cmake/: Findyaml-cpp.cmake  cmakeinc.cmake
kadai1-1/: CMakeLists.txt  main.cpp
kadai1-2/: CMakeLists.txt  main.cpp  memo.md
kadai2-1/: CMakeLists.txt  main.cpp
kadai3/: CMakeLists.txt  main.cpp
realsense/: main2.cpp
